<resources>
    <string name="app_name">Jugi Light Controller</string>
    <string name="color_title">Farbiges Licht</string>
    <string name="light_title">Weisses Licht</string>
    <string name="brightness">Helligkeit</string>
    <string name="temperature">Temperatur</string>
    <string name="min_temp">3200K</string>
    <string name="max_temp">6000K</string>
    <string name="ip">IP-Adresse</string>
    <string name="rgbdimmer_dmx">Farbe Dimmer Kanal</string>
    <string name="rgbred_dmx">Farbe Rot Kanal</string>
    <string name="rgbgreen_dmx">Farbe Grün Kanal</string>
    <string name="rgbblue_dmx">Farbe Blau Kanal</string>
    <string name="ww_dmx">Warmweiss Kanal</string>
    <string name="cw_dmx">Kaltweiss Kanal</string>
    <string name="save">Sichern</string>
    <string name="settings_error">Bitte Eingaben überprüfen</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_warning">He hallo was machsch du da? Das därf nur de Timon ändere!</string>

</resources>